--- a/Server/apps/mpconsole/templates copy/os_managment/os_profile_manager.html
+++ b/Server/apps/mpconsole/templates copy/os_managment/os_profile_manager.html
@@ -278,7 +278,7 @@
 				// Left Column
 				_htm = _htm + '<div class="col-md-2">';
 				// Remove Image
-				_htm = _htm + '<span class="remove"><img src="/static/images/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
+				_htm = _htm + '<span class="remove"><img src="/static/img/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
 				_htm = _htm + "&nbsp;";
 
 				// Criteria Type
