--- a/Server/apps/mpconsole/templates copy/os_managment/os_profile_wizard.html
+++ b/Server/apps/mpconsole/templates copy/os_managment/os_profile_wizard.html
@@ -147,7 +147,7 @@
 						<input type="hidden" id="reqid" value="0">
 						<div class="optionBox">
 							<div class="block">
-								<p><h5><span class="add" id='spanLink'><img src="/static/images/process_add_16.png"/> Add Criteria</span></h5><p>
+								<p><h5><span class="add" id='spanLink'><img src="/static/img/process_add_16.png"/> Add Criteria</span></h5><p>
 							</div>
 						</div>
 					</div>
@@ -303,7 +303,7 @@
 				// Left Column
 				_htm = _htm + '<div class="col-md-2">';
 				// Remove Image
-				_htm = _htm + '<span class="remove"><img src="/static/images/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
+				_htm = _htm + '<span class="remove"><img src="/static/img/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
 				_htm = _htm + "&nbsp;";
 
 				// Criteria Type
