--- a/Server/apps/mpconsole/templates copy/patches/custom_patch_wizard.html
+++ b/Server/apps/mpconsole/templates copy/patches/custom_patch_wizard.html
@@ -232,7 +232,7 @@
 						<input type="hidden" id="reqid" value="0">
 						<div class="optionBox">
 							<div class="block">
-								<span class="add" id='spanLink'><p><h5><img src="/static/images/process_add_16.png"/> Add Criteria</h5></span><p>
+								<span class="add" id='spanLink'><p><h5><img src="/static/img/process_add_16.png"/> Add Criteria</h5></span><p>
 							</div>
 						</div>
 					</div>
@@ -286,7 +286,7 @@
 								<input type="file" name="mainPatchFile" message="Error [Patch File]: A patch package name is required.">
 								<div style="font-size:10px;padding:10px;">
 									<a href="http://#CGI.SERVER_NAME#/mp-content{{data.pkg_url}}" style="font-size:12px;">
-										<img src="/static/images/arrow_down.png" height="14"/>{{data.pkg_name or ''}} ({{data.pkg_hash or ''}})
+										<img src="/static/img/arrow_down.png" height="14"/>{{data.pkg_name or ''}} ({{data.pkg_hash or ''}})
 									</a>
 								</div>
 							</div>
@@ -346,7 +346,7 @@
 							<input type="hidden" id="preid" value="0">
 							<div class="blockPre">
 								<label>Pre-Requisite Package(s)</label>
-								<span class="addPre" id='spanLink'><p><h5><img src="/static/images/pkg_add.png"/> Add Criteria</h5></span><p>
+								<span class="addPre" id='spanLink'><p><h5><img src="/static/img/pkg_add.png"/> Add Criteria</h5></span><p>
 							</div>
 						</div>
 
@@ -356,7 +356,7 @@
 							<input type="hidden" id="postid" value="0">
 							<div class="blockPost">
 								<label>Post-Requisite Package(s)</label>
-								<span class="addPost" id='spanLink'><p><h5><img src="/static/images/pkg_add.png"/> Add Criteria</h5></span><p>
+								<span class="addPost" id='spanLink'><p><h5><img src="/static/img/pkg_add.png"/> Add Criteria</h5></span><p>
 							</div>
 						</div>
 
@@ -513,7 +513,7 @@
 				// Left Column
 				_htm = _htm + '<div class="col-md-2">';
 				// Remove Image
-				_htm = _htm + '<span class="remove"><img src="/static/images/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
+				_htm = _htm + '<span class="remove"><img src="/static/img/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
 				_htm = _htm + "&nbsp;";
 
 				// Criteria Type
@@ -570,7 +570,7 @@
 				// Left Column
 				_htm = _htm + '<div class="col-md-2">';
 				// Remove Image
-				_htm = _htm + '<span class="remove"><img src="/static/images/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
+				_htm = _htm + '<span class="remove"><img src="/static/img/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
 				_htm = _htm + "&nbsp;";
 				// Order
 				_htm = _htm + "<input type='text' name='reqCri_Order_"+sid+"' value='"+sid+"' size='4'><small>(Order)</small>";
