--- a/Server/apps/mpconsole/templates copy/patches/patch_group_patches.html
+++ b/Server/apps/mpconsole/templates copy/patches/patch_group_patches.html
@@ -28,7 +28,7 @@
 		</table>
 	</div>
 	<div id="overlay">
-		<img id="overlayImg" src="{{ url_for('static', filename='images/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
+		<img id="overlayImg" src="{{ url_for('static', filename='img/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
 		<h1 style="text-align: center; color: white; ">Saving...</h1>
 	</div>
 {% endblock %}
