--- a/Server/apps/mpconsole/templates copy/base.html
+++ b/Server/apps/mpconsole/templates copy/base.html
@@ -65,7 +65,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<img class="pull-left" src="{{ url_for('static', filename='images/mp_3_icon_40.png') }}" alt="Logo" style="padding: 5px;margin-left: 10px;">
+				<img class="pull-left" src="{{ url_for('static', filename='img/mp_3_icon_40.png') }}" alt="Logo" style="padding: 5px;margin-left: 10px;">
 				<a class="navbar-brand" href="{{ url_for('dashboard.index')}}" style="margin-left: -10px;"> MacPatch - Admin Console</a>
 			</div>
 			<!-- /.navbar-header -->
