--- a/Server/apps/mpconsole/templates copy/login.html
+++ b/Server/apps/mpconsole/templates copy/login.html
@@ -35,7 +35,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading text-center">
-                        <img class="center-block" src="{{ url_for('static', filename='images/mp_3_icon_90.png') }}" />
+                        <img class="center-block" src="{{ url_for('static', filename='img/mp_3_icon_90.png') }}" />
                         <h4 class="center-block">MacPatch Admin Console</h4>
                     </div>
                     <div class="panel-body">
