--- a/Server/apps/mpconsole/templates copy/patches/apple_patch_wizard.html
+++ b/Server/apps/mpconsole/templates copy/patches/apple_patch_wizard.html
@@ -148,7 +148,7 @@
 						<input type="hidden" id="reqid" value="0">
 						<div class="optionBox">
 							<div class="block">
-								<span class="add" id='spanLink'><p><h5><img src="/static/images/process_add_16.png"/> Add Criteria</h5></span><p>
+								<span class="add" id='spanLink'><p><h5><img src="/static/img/process_add_16.png"/> Add Criteria</h5></span><p>
 							</div>
 						</div>
 					</div>
@@ -259,7 +259,7 @@
 				_htm = _htm + '<div class="row top-buffer"><div class="col-md-3">';
 				//_htm = _htm + '<div class="column-left">';
 				// Remove Image
-				_htm = _htm + '<span class="remove"><img src="/static/images/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
+				_htm = _htm + '<span class="remove"><img src="/static/img/cancel.png" style="vertical-align:top;margin-top:2px;" height="14" width="14"></span>';
 				_htm = _htm + "&nbsp;";
 				// Criteria Type
 				_htm = _htm + "<select name='reqCri_type_" + sid + "' size='1' style='vertical-align:top\;'>";
