--- a/Server/apps/mpconsole/templates copy/software/software_group_tasks.html
+++ b/Server/apps/mpconsole/templates copy/software/software_group_tasks.html
@@ -25,7 +25,7 @@
 		<div id="group_id" hidden>{{group_id}}</div>
 	</div>
 	<div id="overlay">
-		<img id="overlayImg" src="{{ url_for('static', filename='images/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
+		<img id="overlayImg" src="{{ url_for('static', filename='img/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
 		<h1 style="text-align: center; color: white; ">Saving...</h1>
 	</div>
 {% endblock %}
