Add whats new window for MacPatch

--- a/Source/MacPatch/MacPatch/MacPatch/html/banner.html
+++ b/Source/MacPatch/MacPatch/MacPatch/html/banner.html
@@ -91,9 +91,8 @@
 									</div>
 								</td>
 								<td>
-									Questions or Help<br>
-									1) Call 4-Help (4-4357) <br>
-									2) Visit <a href="https://answers.llnl.gov">https://answers.llnl.gov</a>
+									Questions or help?  <br>
+									Visit <a href="https://servicenow.llnl.gov">https://servicenow.llnl.gov</a> <br> and search on ‘macpatch.’
 								</td>
 							</tr>
 						</table>
