--- a/Source/MacPatch/MPClientStatus/MPClientStatus/html/banner.html
+++ b/Source/MacPatch/MPClientStatus/MPClientStatus/html/banner.html
@@ -13,12 +13,12 @@
 				background-color: #fff;
 				background-color: rgba(70, 70, 70, 0.25);
 			}
-		
+
 			.carousel .carousel-indicators .active
 			{
 				background-color: #444;
 			}
-		
+
 			.carousel-indicators
 			{
 				bottom:-16px;
@@ -26,26 +26,21 @@
 		</style>
 	</head>
 	<body>
-		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="7000">
+		<div id="whatsNewCarousel" class="carousel slide" data-ride="carousel" data-interval="7000">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
+				<li data-target="#whatsNewCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#whatsNewCarousel" data-slide-to="1"></li>
 			</ol>
-			
+
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="html/images/MPSlide1.png" alt="Los Angeles">
+					<img src="html/images/MPSlide_3.6.1-1.png" alt="Slide1">
 				</div>
-				
+
 				<div class="item">
-					<img src="html/images/MPSlide2a.png" alt="Chicago">
-				</div>
-				
-				<div class="item">
-					<img src="html/images/MPSlide2b.png" alt="Chicago">
+					<img src="html/images/MPSlide_3.6.1-2.png" alt="Slide2">
 				</div>
 			</div>
 		</div>
